@@ -1,4 +1,4 @@
-.TH "XMP" "1" "Version 2\&.0\&.5" "Jan 2001" "Extended Module Player" 
+.TH "XMP" "1" "Version 2\&.1\&.1" "Feb 2005" "Extended Module Player" 
 .PP 
 .SH "NAME" 
 xmp, xxmp - Extended Module Player
@@ -242,8 +242,7 @@ Path to the dynamically linked drivers (only used if xmp was compiled
 with --enable-dynamic).
 .PP 
 .SH "AUTHOR" 
-Claudio Matsuoka <\fIclaudio@helllabs\&.org\fP> and Hipolito
-Carraro Jr <\fIhipolito@onda\&.com\&.br\fP>. Portions of code
+Claudio Matsuoka and Hipolito Carraro Jr. Portions of code
 used in xmp have been contributed by several other authors,
 check docs/CREDITS for the complete list.
 .PP 
