@@ -7,15 +7,15 @@
 ####	An <yesno> argument is assumed "yes" when the first character
 ####	is either 'y' or 'o'.
 ####
-####    $Id: xmp.conf,v 1.2 2003-06-24 23:29:29 dmierzej Exp $
+####    $Id: xmp.conf,v 1.3 2005-02-24 12:52:12 cmatsuoka Exp $
 ####
 ##########################################################################
 
 
 # verbosity = <val>
-# Verbosity level. Default is 0.
+# Verbosity level. Default is 1.
 #
-verbosity = 1
+#verbosity = 1
 
 
 ##########################################################################
@@ -27,7 +27,7 @@ verbosity = 1
 # driver = <name>
 # Output device to be used (oss_seq, oss_mix, etc).
 #
-#driver = alsa_mix
+driver = oss_mix
 
 
 # OSS software mixing
